<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/theme_color_2"
    android:elevation="6dp"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/productName"
        android:layout_width="256dp"
        android:maxWidth="420dp"
        android:layout_height="wrap_content"
        android:hint="@string/searchProductName"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="32sp"

        >

    </com.google.android.material.textfield.TextInputEditText>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/search"
            android:elevation="3dp"
            >

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/theme_color_3"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/minPrice"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="2sp"
            android:textSize="10sp"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minPrice"
            android:layout_width="64dp"
            android:maxWidth="420dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:autoSizeTextType="uniform"
            android:textSize="12sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxPrice"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:textSize="10sp"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxPrice"
            android:layout_width="64dp"
            android:maxWidth="420dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:autoSizeTextType="uniform"
            android:textSize="12sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:textSize="10sp"
            >

        </TextView>

        <Spinner
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>