<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/user_background"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".UserActivity">



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/userMenuLogin"
            android:textColor="@color/white"
            android:textSize="64sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="32dp"

            >

        </androidx.appcompat.widget.AppCompatTextView>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="600dp"
            android:paddingHorizontal="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@color/theme_color_1"
                android:elevation="4dp"
                android:hint="@string/enterMail"
                android:textColorHint="@color/white"
                android:singleLine="true"
                android:textSize="32sp"></androidx.appcompat.widget.AppCompatEditText>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24sp"
                android:background="@color/theme_color_1"
                android:elevation="4dp"
                android:hint="@string/enterPassword"
                android:textColorHint="@color/white"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="32dp"></androidx.appcompat.widget.AppCompatEditText>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_signin"
                android:elevation="4dp"
                android:text="@string/signIn"
                android:textAlignment="center"
                android:textSize="32sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_signin"
                android:elevation="1dp"
                android:text="@string/signUp"
                android:textAlignment="center"
                android:textSize="32sp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"></androidx.appcompat.widget.AppCompatButton>




        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>