<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/theme_color_2"
    app:cardCornerRadius="4dp"

    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themeSettings"
            android:textAlignment="center"
            android:textSize="24dp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settingsCardBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/theme_color_0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="8sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/themeColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.skydoves.colorpickerview.ColorPickerView
                    android:id="@+id/themeColor"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/defaultName"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/themeColor"
                    app:layout_constraintTop_toTopOf="parent"></Button>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>